# PDF_detection

./: LongformerTrain.py  README.md  finalmodel.py
DecisionTree/: DTtrain.py  decision_tree_pdf.pkl  dt.py  testdata.csv
DecisionTree/pdfid/: FillValueInCSV.py  copytest.csv  copytest1.csv  csvcopy.py  demofeatures.csv  extractfeatures.py  pdf-20231031.csv  test_features.csv
DecisionTree/pdfid/pdfid/: pdfid.py
DecisionTree/pdfid/pdfid.egg-info/: PKG-INFO
DecisionTree/zx/: detectcsv.py  dt.py  test.csv  testdata.csv
Longformer4096/: config.json
extract-js-from-pdf/: README.md  extractjs.sh  package-lock.json  package.json  pyproject.toml
